--- a/parts/header.html
+++ b/parts/header.html
@@ -2,6 +2,7 @@
 <div class="wp-block-group alignwide has-contrast-color has-base-2-background-color has-text-color has-background has-link-color" style="padding-top:0px;padding-bottom:0px"><!-- wp:group {"align":"wide","style":{"spacing":{"padding":{"top":"0","bottom":"0"}}},"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
 	<div class="wp-block-group alignwide" style="padding-top:0;padding-bottom:0"><!-- wp:navigation {"ref":7} /-->
 	
+	<!-- wp:pattern {"slug":"hso/header-top-bar"} /-->
 	<!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"}} -->
 	<div class="wp-block-group"><!-- wp:navigation {"ref":11} /--></div>
 	<!-- /wp:group --></div>
