--- a/parts/header.html
+++ b/parts/header.html
@@ -1,11 +1,11 @@
 <!-- wp:group {"align":"wide","style":{"elements":{"link":{"color":{"text":"var:preset|color|contrast"}}},"spacing":{"padding":{"top":"0px","bottom":"0px"}}},"backgroundColor":"base-2","textColor":"contrast","layout":{"type":"constrained"}} -->
 <div class="wp-block-group alignwide has-contrast-color has-base-2-background-color has-text-color has-background has-link-color" style="padding-top:0px;padding-bottom:0px">
 	<!-- wp:group {"style":{"spacing":{"padding":{"top":"0","bottom":"0"}}},"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
-	<div class="wp-block-group container d-flex justify-content-between align-items-center py-1" style="padding-top:0;padding-bottom:0">
+	<div class="wp-block-group container d-flex justify-content-center justify-content-md-between align-items-center py-1" style="padding-top:0;padding-bottom:0">
 	
 	<!-- wp:pattern {"slug":"hso/header-top-bar"} /-->
 	<!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"}} -->
-	<div class="wp-block-group"><!-- wp:navigation {"ref":4} /--></div>
+	<div class="wp-block-group d-none d-md-block"><!-- wp:navigation {"ref":4} /--></div>
 	<!-- /wp:group --></div>
 	<!-- /wp:group --></div>
 	<!-- /wp:group -->
