--- a/parts/header.html
+++ b/parts/header.html
@@ -14,7 +14,7 @@
 	<!-- /wp:group -->
 	
 	<!-- wp:group {"align":"wide","style":{"spacing":{"padding":{"top":"5px","bottom":"5px"}},"elements":{"link":{"color":{"text":"var:preset|color|base-2"}}}},"backgroundColor":"black","textColor":"base-2","layout":{"type":"constrained"}} -->
-	<div class="wp-block-group alignwide has-base-2-color has-black-background-color has-text-color has-background has-link-color" style="padding-top:5px;padding-bottom:5px"><!-- wp:group {"className":"container","style":{"spacing":{"padding":{"top":"var:preset|spacing|10","bottom":"var:preset|spacing|10"}}},"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
+	<div class="wp-block-group alignwide has-base-2-color has-black-background-color has-text-color has-background has-link-color" id="site-header-main" style="padding-top:5px;padding-bottom:5px"><!-- wp:group {"className":"container","style":{"spacing":{"padding":{"top":"var:preset|spacing|10","bottom":"var:preset|spacing|10"}}},"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
 	<div class="wp-block-group container d-flex justify-content-between align-items-center" style="padding-top:var(--wp--preset--spacing--10);padding-bottom:var(--wp--preset--spacing--10)"><!-- wp:navigation {"ref":28, "overlayMenu":"never"} /-->
 	
 	<!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"}} -->
