--- a/parts/header.html
+++ b/parts/header.html
@@ -7,7 +7,7 @@
 	
 		<!-- wp:pattern {"slug":"hso/header-top-bar"} /-->
 		<!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"}} -->
-		<div class="wp-block-group d-none d-md-block"><!-- wp:navigation {"ref":4,"overlayMenu":"never","className":"header-top-bar-nav"} /--></div>
+		<div class="wp-block-group header-top-bar-nav"><!-- wp:navigation {"ref":4,"overlayMenu":"never","className":"header-top-bar-nav"} /--></div>
 		<!-- /wp:group --></div>
 		<!-- /wp:group -->
 	</div>
