--- a/parts/header.html
+++ b/parts/header.html
@@ -2,8 +2,8 @@
 <div class="wp-block-group alignwide header-fixed">
 	<!-- wp:group {"align":"wide","style":{"elements":{"link":{"color":{"text":"var:preset|color|contrast"}}},"spacing":{"padding":{"top":"0px","bottom":"0px"}}},"backgroundColor":"base-2","textColor":"contrast","layout":{"type":"constrained"}} -->
 	<div class="wp-block-group alignwide has-contrast-color has-base-2-background-color has-text-color has-background has-link-color" style="padding-top:0px;padding-bottom:0px">
-		<!-- wp:group {"style":{"spacing":{"padding":{"top":"0","bottom":"0"}}},"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
-		<div class="wp-block-group container d-flex justify-content-center justify-content-md-between align-items-center py-1" style="padding-top:0;padding-bottom:0">
+		<!-- wp:group {"className":"site-header-upper--inner-content","style":{"spacing":{"padding":{"top":"0","bottom":"0"}}},"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
+		<div class="wp-block-group container site-header-upper--inner-content" style="padding-top:0;padding-bottom:0">
 	
 		<!-- wp:pattern {"slug":"hso/header-top-bar"} /-->
 		<!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"}} -->
@@ -14,8 +14,8 @@
 	<!-- /wp:group -->
 	
 	<!-- wp:group {"align":"wide","style":{"spacing":{"padding":{"top":"5px","bottom":"5px"}},"elements":{"link":{"color":{"text":"var:preset|color|base-2"}}}},"backgroundColor":"black","textColor":"base-2","layout":{"type":"constrained"}} -->
-	<div class="wp-block-group alignwide has-base-2-color has-black-background-color has-text-color has-background has-link-color" id="site-header-main" style="padding-top:5px;padding-bottom:5px"><!-- wp:group {"className":"container","style":{"spacing":{"padding":{"top":"var:preset|spacing|10","bottom":"var:preset|spacing|10"}}},"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
-	<div class="wp-block-group container d-flex justify-content-between align-items-center" style="padding-top:var(--wp--preset--spacing--10);padding-bottom:var(--wp--preset--spacing--10)"><!-- wp:navigation {"ref":28, "overlayMenu":"never"} /-->
+	<div class="wp-block-group alignwide has-base-2-color has-black-background-color has-text-color has-background has-link-color" id="site-header-main" style="padding-top:5px;padding-bottom:5px"><!-- wp:group {"className":"container site-header-lower--inner-content","style":{"spacing":{"padding":{"top":"var:preset|spacing|10","bottom":"var:preset|spacing|10"}}},"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
+	<div class="wp-block-group container site-header-lower--inner-content" style="padding-top:var(--wp--preset--spacing--10);padding-bottom:var(--wp--preset--spacing--10)"><!-- wp:navigation {"ref":28, "overlayMenu":"never"} /-->
 	
 	<!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"}} -->
 	<div class="wp-block-group">
